# pytennisscorer

./: .gitignore  .mcp.json  Makefile  README.md  SETUP_INSTRUCTIONS.md  WORKFLOWS.md  pyproject.toml
.claude/commands/: implement.md  plan.md  quick.md  remember.md  verify.md
.claude/hooks/: file_checker_python.py  file_checker_qlty.py
.claude/rules/: config.yaml
.claude/rules/standard/core/: context-management.md  mcp-tools.md
.claude/rules/standard/workflow/: implement.md  plan.md  quick.md  remember.md  verify.md
.github/: README.md
.github/workflows/: ci.yml  docs.yml  quarto-docs.yml  release.yml
docs/: api_reference.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  match_types.rst  modules.rst  pytennisscorer.rst  quickstart.rst  testing.rst
docs-quarto/: .gitignore  README.md  _quarto.yml  api-reference.qmd  changelog.qmd  contributing.qmd  custom-dark.scss  custom.scss  examples.qmd  index.qmd  installation.qmd  match-types.qmd  setup-pyodide.js  styles.css  tutorial.qmd
docs-quarto/_extensions/r-wasm/quarto-live/: _extension.yml
docs-quarto/wheels/: build-wheel.py  pytennisscorer-0.1.0-py3-none-any.whl
docs/plans/: 2025-01-18-tennis-scorer-package.md
notebooks/: tennis_scorer_examples.ipynb
src/pytennisscorer/: __init__.py  configs.py  formatter.py  models.py  progression.py  scorer.py  scoring.py
tests/: test_configs.py  test_formatter.py  test_models.py  test_progression.py  test_scorer.py  test_scoring.py  test_tiebreak.py
